fix: dark mode & zalo icon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,8 +32,6 @@ html {
 
 body {
   font-family: var(--font-be-vietnam), sans-serif;
-  background-color: #faf7f2;
-  color: #1a1a1a;
 }
 
 .font-cormorant {
